--- a/styles/Varablies.scss
+++ b/styles/Varablies.scss
@@ -1,4 +1,5 @@
-$main-margin-left: 10%;
+// $main-margin-left: 10%;
+$main-margin-left: 50px;
 
 $sidebar-width: 150px;
 
@@ -243,24 +244,21 @@ $text-color: #121109;
 @mixin headerText {
     margin-left: $main-margin-left;
     margin-top: 82px;
+    margin-right: 150px;
     padding-bottom: 17px;
-    width: 1000px;
+    max-width: 1000px;
     font: normal normal normal 16px/25px "Work Sans";
     letter-spacing: 0px;
     color: #FFFFFF;
     opacity: 1;
-    @media all and (max-width: 1300px){
-      // width: 800px;
-      margin-right: 150px;
-    }
     @media all and (max-width: 1024px){
-      width: 600px;
+      max-width: 600px;
     }
     @media all and (max-width: 740px){
-      width: 550px;
+      max-width: 550px;
     }
     @media all and (max-width: 700px){
-      width: auto;
+      max-width: auto;
       font: normal normal 300 16px/25px "Work Sans Light";
       margin-left: 27px;
       margin-right: 10px;
