--- a/styles/Billboard.module.scss
+++ b/styles/Billboard.module.scss
@@ -2,8 +2,11 @@
 
 .billboard{
     position: relative;
-    height: 738px;
+    min-height: 738px;
+    // height: auto;
+    padding-bottom: 59px;
     @media (max-width: 700px){
+      min-height: auto;
       height: auto;
       padding-bottom: 59px;
     }
