--- a/styles/Block.module.scss
+++ b/styles/Block.module.scss
@@ -5,8 +5,9 @@ $block-height: 323px;
 
 @mixin block($width, $height) {
     max-width: $width;
-    height: $height;
-    border: 2px solid $main-color;
+    // height: $height;
+    height: auto;
+    // border: 2px solid $main-color;
     // cursor: pointer;    
     background-color: white;
     &:hover{
@@ -23,7 +24,7 @@ $block-height: 323px;
     flex-direction: column;
     align-items: center;
     position: relative;
-    // z-index: 2;
+    z-index: 1;
     margin: 0;
     &:hover{
         .block{
@@ -34,7 +35,7 @@ $block-height: 323px;
 
 .block{
     @include block(400px, 528px);
-    border: 1px solid $main-color;
+    // border: 1px solid $main-color;
     transition-duration: 0.4s;
     &:hover{
         // background-color: $main-color;
