--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -125,6 +125,9 @@
     display: flex;
     flex-direction: column;
     padding-right: 20px;
+    @media all and (max-width: 1000px){
+        padding-right: 150px;
+    }
     @media all and (max-width: 700px){
         padding-right: 110px;
     }
@@ -148,6 +151,9 @@
 
 .buttons{
     display: flex;
+    @media(max-width: 1000px){
+        display: none;
+    }
 }
 
 @media(max-width: 700px){
@@ -163,9 +169,6 @@
     .header{
         height: 90px;
         border: none;
-    }
-    .buttons{
-        display: none;
     }
 }
 
