--- a/styles/Hours.module.scss
+++ b/styles/Hours.module.scss
@@ -17,6 +17,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #FFFFFF;
+    z-index: 1;
 }
 
 .hour{
