--- a/styles/Sidebar.module.scss
+++ b/styles/Sidebar.module.scss
@@ -17,6 +17,9 @@ $language-taxt-width: 98px;
     // @media all and (max-width: 1024px){
     //     display: none;
     // }
+    @media all and (max-width: 1180px){
+        border: none;
+    }
     @media all and (max-width: 1024px){
         width: auto;
         height: auto;
@@ -30,8 +33,8 @@ $language-taxt-width: 98px;
     justify-content: center;
     align-items: center;
     @media all and (max-width: 1024px){
-        height: 71px;
-        margin-right: 20px;
+        height: 150px;
+        margin-right: 40px;
     }
     @media all and (max-width: 700px){
         height: 92px;
@@ -55,7 +58,7 @@ $language-taxt-width: 98px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    @media all and (max-width: 1024px){
+    @media all and (max-width: 1180px){
         display: none;
     }
     .text{
