--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -265,6 +265,9 @@
     // }
     width: 100%;
     border: 1px solid $main-color;
+    @media (max-width: 700px) {
+        padding: 24px 24px 0 24px;
+    }
     .blockLargeInner{
         display: flex;
         @media (max-width:700px){
