--- a/styles/Ksiegowosc.module.scss
+++ b/styles/Ksiegowosc.module.scss
@@ -1,5 +1,13 @@
 @import './Varablies.scss';
 
+.headerTextBoldFont{
+    @include headerBoldFont();
+    font: normal normal 900 16px/24px "Work Sans Black";
+    @media all and (max-width: 1300px){
+        font: normal normal 900 16px/24px "Work Sans Black";
+    }
+}
+
 .noBackgroundBillboardText{
     @include noBackgroundBillboardText();
     max-width: 1115px;
@@ -48,7 +56,7 @@
         padding-bottom: 44px;
         margin-top: 52px;
         width: auto;
-        max-width: 1000px;
+        max-width: 1030px;
         margin-right: 150px;
         @media (max-width: 700px) {
             max-width: 380px;
