--- a/styles/Wynajecie.module.scss
+++ b/styles/Wynajecie.module.scss
@@ -4,7 +4,13 @@
     display: flex;
     justify-content: space-between;
     align-items: stretch;
-    position: relative;
+    // position: relative;
+    >:nth-child(2){
+        position: static;
+        @media (max-width: 1024px) {
+            position: fixed;
+        }
+    }
     @media (max-width: 1024px) {
         flex-direction: column-reverse;
     }
@@ -14,6 +20,7 @@
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
+    min-height: 100vh;
 }
 
 .wynajecieHeader{
