--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -140,7 +140,7 @@
     }
     @media all and (max-width: 1300px){
         margin-right: 40px;
-        margin-bottom: 70px;
+        // margin-bottom: 70px;
     }
     @media all and (max-width: 1100px){
         margin-right: 20px;
