--- a/styles/SelectOption.module.scss
+++ b/styles/SelectOption.module.scss
@@ -35,12 +35,19 @@
     flex: 1;
     height: auto;
     padding-bottom: 24px;
+    @media (max-width: 800px) {
+        max-width: 100%;
+        width: auto;
+        margin-right: 26px;
+        margin-bottom: 20px;
+    }
 }
 
 .option{
     @include block();
     @include regular();
     color: #411141;
+    background-color: #ffffff;
     &:hover{
         border: 1px solid $text-color;
     }
@@ -48,6 +55,12 @@
     flex: 1;
     height: auto;
     padding-bottom: 24px;
+    @media (max-width: 800px) {
+        max-width: 100%;
+        width: auto;
+        margin-right: 26px;
+        margin-bottom: 20px;
+    }
 }
 
 // .option{
@@ -68,6 +81,12 @@
     display: flex;
     margin-left: $main-margin-left;
     margin-bottom: 50px;
+    @media (max-width: 800px) {
+        flex-direction: column;
+    }
+    @media (max-width: 800px) {
+        margin-left: 26px;
+    }
 }
 
 
