--- a/styles/Wynajecie.module.scss
+++ b/styles/Wynajecie.module.scss
@@ -5,13 +5,25 @@
     justify-content: space-between;
     align-items: stretch;
     // position: relative;
+    @media (max-width: 1400px) {
+        >:nth-child(2){
+            >:nth-child(2){
+                >:nth-child(1){
+                    border: none;
+                    >:nth-child(2){
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
     >:nth-child(2){
         position: static;
-        @media (max-width: 1024px) {
+        @media (max-width: 1124px) {
             position: fixed;
         }
     }
-    @media (max-width: 1024px) {
+    @media (max-width: 1124px) {
         flex-direction: column-reverse;
     }
 }
@@ -29,7 +41,7 @@
     display: flex;
     align-items: center;
     padding-left: $main-margin-left;
-    @media (max-width: 1024px) {
+    @media (max-width: 1124px) {
         display: none;
     }
 }
@@ -44,7 +56,7 @@
     @include title();
     width: 597px;
     margin-top: 60px;
-    @media all and (max-width: 1024px){
+    @media all and (max-width: 1124px){
         margin-top: 280px;
     }
     .boldFont{
