--- a/styles/Line.module.scss
+++ b/styles/Line.module.scss
@@ -1,11 +1,11 @@
-.wynajecieLineWrapper{
+.lineWrapper{
     position: absolute;
     width: 100%;
     z-index: 1;
     top: 149px;
 }
 
-.wynajecieLine{
+.line{
     display: flex;
     justify-content: center;
 }
