--- a/styles/ProfileBoilerplate.module.scss
+++ b/styles/ProfileBoilerplate.module.scss
@@ -9,7 +9,22 @@
         padding-top: 41px;
         width: calc(100% - 276px);
         margin-right: 27px;
-        @media (max-width: 700px) {
+        >:nth-child(1){
+            >:nth-child(2){
+                :nth-child(n){
+                    color: $main-color;
+                }
+            }
+        }
+        @media (max-width: 1590px) {
+            >:nth-child(1){
+                border: none;
+                >:nth-child(2){
+                    display: none;
+                }
+            }
+        }
+        @media (max-width: 800px) {
             padding-left: 27px;
             // padding-right: 27px;
             width: auto;
