--- a/styles/WynajmijButton.module.scss
+++ b/styles/WynajmijButton.module.scss
@@ -6,15 +6,18 @@
     margin-top: 35px;
     width: 226px;
     background-color: $main-color;
-    @media (max-width: 700px) {
-        width: 156px;
-        height: 38px;
-        margin-left: 26px;
-        a{
-            line-height: 38px;
-            font: normal normal bold 12px/14px "Work Sans Bold";
-            height: auto;
-        }
+    // @media (max-width: 1023px) {
+    //     width: 156px;
+    //     height: 55px;
+    //     margin-left: 26px;
+    // }
+    // @media (max-width: 700px) {
+    //     height: 38px;
+    // }
+    a{
+        line-height: 38px;
+        font: normal normal bold 12px/14px "Work Sans Bold";
+        height: auto;
     }
 }
 
