--- a/styles/CennikChoices.module.scss
+++ b/styles/CennikChoices.module.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     margin-left: $main-margin-left;
     margin-bottom: 100px;
-    @media (max-width: 700px) {
+    @media (max-width: 1023px) {
         flex-direction: column;
         margin-left: 27px;
         margin-right: 27px !important;
@@ -30,9 +30,13 @@
         -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
         box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
     } 
-    @media (max-width: 700px) {
+    @media (max-width: 1023px) {
         width: 100%;
         margin-bottom: 25px;
+        flex-direction: row;
+    }
+    @media (max-width: 500px) {
+        flex-direction: column;
     }
 }
 
@@ -45,7 +49,7 @@
         -webkit-box-shadow: none;
         box-shadow: none;
     }
-    @media (max-width: 700px) {
+    @media (max-width: 1023px) {
     //    order: 1;
     }
 }
@@ -64,7 +68,7 @@
 }
 
 .cennikBlock, .cennikMainBlock{
-    @media (max-width: 700px) {
+    @media (max-width: 1023px) {
         flex-direction: row;
         .main{
             margin-left: 10px;
@@ -136,7 +140,7 @@
     padding-top: 38px;
     z-index: 1;
     text-align: center;
-    @media (max-width: 700px) {
+    @media (max-width: 1023px) {
         padding-top: 21px;
         font: normal normal 20px/24px "Work Sans Medium";
     }
@@ -148,7 +152,7 @@
     color: $text-color;
     padding-top: 60px;
     z-index: 1;
-    @media (max-width: 700px) {
+    @media (max-width: 1023px) {
         padding-top: 25px;
         font: normal normal 900 60px/33px "Work Sans Black";
     }
@@ -160,7 +164,7 @@
     color: $text-color;
     padding-top: 25px;
     z-index: 1;
-    @media (max-width: 700px) {
+    @media (max-width: 1023px) {
         padding-top: 18px;
         padding-bottom: 25px;
         font: normal normal 300 14px/33px "Work Sans Light";
@@ -205,7 +209,7 @@
     padding: 0 41px;
     padding-top: 50px;
     z-index: 1;
-    @media (max-width: 700px) {
+    @media (max-width: 1023px) {
         padding: 30px 20px 0 20px;
         font: normal normal 300 14px/28px "Work Sans Light";
     }
