--- a/styles/Calendar.module.scss
+++ b/styles/Calendar.module.scss
@@ -1,12 +1,27 @@
-.calendar{
+@mixin calendar {
     display: flex;
     align-items: stretch;
     overflow: hidden;
     justify-content: flex-start;
-    // max-width: 1100px;
+    max-width: 1030px;
     margin-bottom: 50px;
-    @media (max-width: 700px) {
+    justify-content: space-between;
+    padding-right: 20px;    
+}
+
+.calendar{
+    @include calendar();
+    @media (max-width: 800px) {
         flex-direction: column;
+        padding-right: 0px;
+    }
+}
+
+.rezCalendar{
+    @include calendar();
+    @media (max-width: 1200px) {
+        flex-direction: column;
+        padding-right: 0px;
     }
 }
 
