--- a/styles/CennikChoices.module.scss
+++ b/styles/CennikChoices.module.scss
@@ -1,14 +1,47 @@
 @import '../styles/Varablies.scss';
 
-.blocks{
+@mixin blocks{
     display: flex;
     justify-content: space-between;
     margin-left: $main-margin-left;
     margin-bottom: 100px;
-    @media (max-width: 1023px) {
+    @media (max-width: 1290px) {
+        flex-direction: column;
+        margin-left: 27px;
+        margin-right: 150px !important;
+    }
+    @media (max-width: 1180px) {
+        margin-right: 27px !important;
+    }
+}
+
+.blocks{
+    @include blocks();
+}
+
+.kontoBlocks{
+    @include blocks();
+    @media (max-width: 1430px) {
         flex-direction: column;
         margin-left: 27px;
         margin-right: 27px !important;
+        .block, .selectedBlock, .mainBlock{
+            flex-direction: row;
+            width: 100%;
+            margin-bottom: 30px;
+            padding-left: 10px;
+        }
+    }
+    @media (max-width: 500px) {
+        .block, .selectedBlock, .mainBlock{
+            flex-direction: column;
+        }
+    }
+    .description{
+        padding-top: 0;
+    }
+    .afterDigit{
+        padding-bottom: 0;
     }
 }
 
@@ -30,7 +63,7 @@
         -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
         box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
     } 
-    @media (max-width: 1023px) {
+    @media (max-width: 1290px) {
         width: 100%;
         margin-bottom: 25px;
         flex-direction: row;
@@ -68,7 +101,7 @@
 }
 
 .cennikBlock, .cennikMainBlock{
-    @media (max-width: 1023px) {
+    @media (max-width: 1290px) {
         flex-direction: row;
         .main{
             margin-left: 10px;
@@ -115,7 +148,7 @@
 
 .slashWrapper{
     width: 100%;
-    height: 20rem;
+    height: 18rem;
     position: absolute;
     overflow: hidden;
     display: flex;
@@ -206,11 +239,18 @@
     font: normal normal 300 16px/28px "Work Sans Light";
     letter-spacing: 0.64px;
     color: $text-color;
-    padding: 0 41px;
+    padding: 0 20px;
     padding-top: 50px;
     z-index: 1;
     @media (max-width: 1023px) {
         padding: 30px 20px 0 20px;
         font: normal normal 300 14px/28px "Work Sans Light";
     }
+}
+
+.wynajmijBtn{
+    @include buttonInput();
+    z-index: 1;
+    text-align: center;
+    line-height: 55px;
 }
