wynajmij adres button. ksiegowosc.

--- a/styles/WynajmijButton.module.scss
+++ b/styles/WynajmijButton.module.scss
@@ -6,18 +6,22 @@
     margin-top: 35px;
     width: 226px;
     background-color: $main-color;
-    // @media (max-width: 1023px) {
-    //     width: 156px;
-    //     height: 55px;
-    //     margin-left: 26px;
-    // }
-    // @media (max-width: 700px) {
-    //     height: 38px;
-    // }
+    p{
+        line-height: 55px;
+        margin-bottom: 0;
+        font: normal normal bold 16px/19px "Work Sans";
+    }
     a{
-        line-height: 38px;
-        font: normal normal bold 12px/14px "Work Sans Bold";
         height: auto;
+    }
+    @media (max-width: 700px) {
+        margin-left: 26px;
+        height: 38px;
+        width: 156px;
+        p{
+            line-height: 38px;
+            font: normal normal bold 12px/14px "Work Sans Bold";
+        }
     }
 }
 
