--- a/styles/Ksiegowosc.module.scss
+++ b/styles/Ksiegowosc.module.scss
@@ -15,9 +15,18 @@
     margin-right: auto;
     margin-top: 180px;
     margin-bottom: 180px;
+    @media (max-width: 1400px) {
+        margin-left: 50px;
+        margin-right: 150px;
+    }
+    @media (max-width: 1180px) {
+        margin-right: 50px;
+        text-align: center;
+    }
     @media (max-width: 700px) {
         font: normal normal 900 20px/24px "Work Sans Black";
         margin: 62px 26px 101px 26px;
+        text-align: left;
     }
 }
 
@@ -158,7 +167,11 @@
         justify-content: space-between;
         margin-left: $main-margin-left;
         margin-bottom: 185px;
-        @media (max-width: 700px) {
+        margin-right: 150px;
+        @media (max-width: 1180px) {
+            margin-right: 0;
+        }
+        @media (max-width: 950px) {
             flex-direction: column;
             margin-bottom: 62px;
         }
@@ -166,7 +179,9 @@
             display: flex;
             flex-direction: column;
             position: relative;
-            @media (max-width: 700px) {
+            padding-right: 20px;
+            text-align: center;
+            @media (max-width: 950px) {
                 margin-bottom: 36px;
             }
             .top{
@@ -176,13 +191,13 @@
                 text-transform: lowercase;
             }
             .bottom{
-                position: absolute;
+                // position: absolute;
                 font: normal normal 300 16px/25px "Work Sans Light";
                 letter-spacing: 0px;
                 color: #411141;
                 left: 0;
                 bottom: -30px;
-                max-width: 300px;
+                // max-width: 300px;
                 @media (max-width: 700px) {
                     position: static;
                 }
