--- a/styles/Polityka.module.scss
+++ b/styles/Polityka.module.scss
@@ -49,11 +49,9 @@
     position: relative;
     >:nth-child(3){
         min-height: 600px;
-        // >:nth-child(2){
-        //     >:nth-child(4){
-        //         display: none;
-        //     }
-        // }
+        @media (max-width: 1300px) {
+            min-height: auto;
+        }
     }
     @include start-animation();
     .headerTitle{
