--- a/styles/globals.css
+++ b/styles/globals.css
@@ -344,3 +344,9 @@ option[value="PL"], option[value="UA"], option[value="RU"], option[value="BY"]{
   margin-bottom: 0;
 }
 
+/* boldSelectOption */
+.boldSelectOption{
+  font-weight: bold;
+  font-family: "Work Sans Black";
+}
+
