--- a/styles/CennikChoices.module.scss
+++ b/styles/CennikChoices.module.scss
@@ -228,10 +228,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    :nth-child(1){
+    :nth-child(1), >:nth-child(4){
         margin-left: auto;
         margin-right: auto;    
         margin-top: 0;
+        z-index: 1;
     }
 }
 
