--- a/styles/Ksiegowosc.module.scss
+++ b/styles/Ksiegowosc.module.scss
@@ -48,13 +48,16 @@
 .ksiegowosc{
     position: relative;
     @include start-animation();
+    a{
+        text-decoration: underline;
+    }
     .headerTitle{
         @include headerTitle();
         // margin-top: 150px;
         margin-top: 50px;
         // width: 595px;
         width: auto;
-        max-width: 890px;
+        max-width: 1100px;
         margin-right: 150px;
         @media (max-width: 700px) {
             max-width: 340px;
@@ -140,7 +143,7 @@
     }
     .secondTitle{
         .title{
-            max-width: 673px;
+            max-width: 800px;
             margin-bottom: 99px;
             @media (max-width: 700px) {
                 margin-top: 0;
