--- a/styles/CennikChoices.module.scss
+++ b/styles/CennikChoices.module.scss
@@ -60,8 +60,8 @@
         border: 2px solid $main-color;
         transform: translateY(-15px);
         // transform: scale(1.05);
-        -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
-        box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 0px 12px 14px 2px rgb(0 0 0 / 25%);
+        box-shadow: 0px 12px 14px 2px rgb(0 0 0 / 25%);
     } 
     @media (max-width: 1290px) {
         width: 100%;
@@ -131,8 +131,8 @@
     border: 2px solid $main-color;
     transform: translateY(-15px);
     // transform: scale(1.05);
-    -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
-    box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 12px 14px 2px rgb(0 0 0 / 25%);
+    box-shadow: 0px 12px 14px 2px rgb(0 0 0 / 25%);
 }
 
 // .slash{
