--- a/styles/Hiring.module.scss
+++ b/styles/Hiring.module.scss
@@ -14,9 +14,9 @@
     @media (max-width: 1124px) {
         @include fixedRightBarWrapper();
         width: auto;
-        -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
-        box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
-    }
+        -webkit-box-shadow: 0px 12px 14px 2px rgb(0 0 0 / 25%);
+        box-shadow: 0px 12px 14px 2px rgb(0 0 0 / 25%);
+        }
 }
 
 .rightBarWrapper{
